# flarksiesis

./: .gitignore  BUILD_GUIDE.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  CLAUDE_CODE_PUSH_GUIDE.md  CMakeLists.txt  LICENSE  PACKAGE_SUMMARY.md  PUSH_COMMANDS.md  QUICKSTART.md  README.md  SIMPLE_CLAUDE_CODE_MESSAGE.txt  UPDATE_NOTES.md  push_to_github.sh
.github/workflows/: linux.yml  macos.yml  windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/windows/: flarksiesis.iss
scripts/: build_installer.sh  build_installer_macos.sh
